Make sure lists go behind sidebar when scrolling horizentally

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
   height: calc(100vh - 70px);
   position: fixed;
   overflow-y: auto;
+  z-index: 1000;
 }
 
 .sidebar.collapsed {
